--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Zentro</title>
+	<title>Salvage</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,11 +25,6 @@ http://www.tooplate.com/view/2076-zentro
 </head>
 <body>
 
-<!-- preloader section -->
-<section class="preloader">
-	<div class="sk-spinner sk-spinner-pulse"></div>
-</section>
-
 <!-- navigation section -->
 <section class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
@@ -39,15 +34,13 @@ http://www.tooplate.com/view/2076-zentro
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">ZENTRO</a>
+			<a href="#" class="navbar-brand">Salvage</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#gallery" class="smoothScroll">FOOD GALLERY</a></li>
-				<li><a href="#menu" class="smoothScroll">SPECIAL MENU</a></li>
-				<li><a href="#team" class="smoothScroll">CHEFS</a></li>
-				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+				<li><a href="./index.html" class="smoothScroll">Home</a></li>
+				<li><a href="./login.html" class="smoothScroll">Log in</a></li>
+				<li><a href="./about.html" class="smoothScroll">About</a></li>
 			</ul>
 		</div>
 	</div>
@@ -59,13 +52,34 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h1>ZENTRO RESTAURANT</h1>
-				<h2>CLEAN &amp; SIMPLE DESIGN</h2>
+				<h1>SALVAGE</h1>
+				<h2>Help eliminate food waste.</h2>
 				<a href="#gallery" class="smoothScroll btn btn-default">LEARN MORE</a>
 			</div>
 		</div>
 	</div>		
 </section>
+
+
+
+
+<!-- discount section -->
+<section id="menu" class="parallax-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
+				<h1 class="heading">Gourmet food - without burning your wallet.</h1>
+				<br />
+				<br />
+				<p class="col-md-12">Up to 30% discounts on full meals, just a moment away.</p>
+				<br />
+				<br />
+				<br />
+				<a href="./login.html"><h1 class="btn-default"style="padding: 20px;">Sign up</h1></a>
+			</div>
+		</div>
+	</div>
+</section>		
 
 
 <!-- gallery section -->
@@ -112,109 +126,6 @@ http://www.tooplate.com/view/2076-zentro
 </section>
 
 
-<!-- menu section -->
-<section id="menu" class="parallax-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Special Menu</h1>
-				<hr>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Vegetable ................ <span>$20.50</span></h4>
-				<h5>Chicken / Rosemary / Lemon</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Meat ........................... <span>$30.50</span></h4>
-				<h5>Meat / Rosemary / Lemon</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Pork ........................ <span>$40.75</span></h4>
-				<h5>Pork / Tooplate / Lemon</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Orange-Rosemary Salad .......................... <span>$55.00</span></h4>
-				<h5>Salad / Rosemary / Orange</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Squid ...................... <span>$65.00</span></h4>
-				<h5>Squid / Rosemary / Lemon</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Orange-Rosemary Shrimp ........................ <span>$70.50</span></h4>
-				<h5>Shrimp / Rosemary / Orange</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Prawn ................... <span>$110.75</span></h4>
-				<h5>Chicken / Rosemary / Lemon</h5>
-			</div>
-			<div class="col-md-6 col-sm-6">
-				<h4>Lemon-Rosemary Seafood ..................... <span>$220.50</span></h4>
-				<h5>Seafood / Rosemary / Lemon</h5>
-			</div>
-		</div>
-	</div>
-</section>		
-
-
-<!-- team section -->
-<section id="team" class="parallax-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Meet Zentro chefs</h1>
-				<hr>
-			</div>
-			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
-				<img src="images/team1.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Thanya</h4>
-				<h3>Main Chef</h3>
-			</div>
-			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<img src="images/team2.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Lynda</h4>
-				<h3>Pizza Specialist</h3>
-			</div>
-			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-				<img src="images/team3.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Jenny Ko</h4>
-				<h3>New Baker</h3>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-<!-- contact section -->
-<section id="contact" class="parallax-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-offset-1 col-md-10 col-sm-12 text-center">
-				<h1 class="heading">Contact Us</h1>
-				<hr>
-			</div>
-			<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeIn" data-wow-delay="0.9s">
-				<form action="#" method="post">
-					<div class="col-md-6 col-sm-6">
-						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
-				  </div>
-					<div class="col-md-6 col-sm-6">
-						<input name="email" type="email" class="form-control" id="email" placeholder="Email">
-				  </div>
-					<div class="col-md-12 col-sm-12">
-						<textarea name="message" rows="8" class="form-control" id="message" placeholder="Message"></textarea>
-					</div>
-					<div class="col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6">
-						<input name="submit" type="submit" class="form-control" id="submit" value="make a reservation">
-					</div>
-				</form>
-			</div>
-			<div class="col-md-2 col-sm-1"></div>
-		</div>
-	</div>
-</section>
-
-
 <!-- footer section -->
 <footer class="parallax-section">
 	<div class="container">
@@ -256,8 +167,8 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h3>ZENTRO</h3>
-				<p>Copyright © Zentro Restaurant and Cafe 
+				<h3>SALVAGE</h3>
+				<p>Copyright © Salvage Restaurant and Cafe 
                 
                 | Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
 			</div>
