--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,62 +48,73 @@ http://www.tooplate.com/view/2076-zentro
             </ul>
         </div>
 		</div>
-	</div>
+    </div>
 </section>
 
-<!-- about section -->
-<section id="about" class="parallax-section">
+<section id="contact" class="parallax-section">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <h1>Stopping waste, one plate at a time.</h1>
-                <br />
-                <br />
-                <h4>We at Salvage are commited to ending the food waste problem the US currently faces. Up to 40% of all food is being thrown out, amounting to $161 billion wasted a year.</h4>
-                <br />
-                <br />
-                <br />
-                <br />
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- team section 
-<section id="team" class="parallax-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Meet Zentro chefs</h1>
+			<div class="col-md-offset-1 col-md-10 col-sm-12 text-center">
+				<h1 class="heading">Contact Us</h1>
 				<hr>
 			</div>
-			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
-				<img src="images/team1.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Thanya</h4>
-				<h3>Main Chef</h3>
+			<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeIn" data-wow-delay="0.9s">
+				<form action="#" method="post">
+					<div class="col-md-6 col-sm-6">
+						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
+				  </div>
+					<div class="col-md-6 col-sm-6">
+						<input name="email" type="email" class="form-control" id="email" placeholder="Email">
+				  </div>
+					<div class="col-md-12 col-sm-12">
+						<textarea name="message" rows="8" class="form-control" id="message" placeholder="Message"></textarea>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6">
+						<input name="submit" type="submit" class="form-control" id="submit" value="make a reservation">
+					</div>
+				</form>
 			</div>
-			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-				<img src="images/team2.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Lynda</h4>
-				<h3>Pizza Specialist</h3>
-			</div>
-			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-				<img src="images/team3.jpg" class="img-responsive center-block" alt="team img">
-				<h4>Jenny Ko</h4>
-				<h3>New Baker</h3>
-			</div>
+			<div class="col-md-2 col-sm-1"></div>
 		</div>
 	</div>
 </section>
---->
 
-<!-- contact section -->
+
+<!-- footer section -->
+<footer class="parallax-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+				<h2 class="heading">Contact Info.</h2>
+				<div class="ph">
+					<p><i class="fa fa-phone"></i> Phone</p>
+					<h4>090-080-0760</h4>
+				</div>
+				<div class="address">
+					<p><i class="fa fa-map-marker"></i> Our Location</p>
+					<h4>120 Duis aute irure, California, USA</h4>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+				<h2 class="heading">Open Hours</h2>
+					<p>Sunday <span>10:30 AM - 10:00 PM</span></p>
+					<p>Mon-Fri <span>9:00 AM - 8:00 PM</span></p>
+					<p>Saturday <span>11:30 AM - 10:00 PM</span></p>
+			</div>
+			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+				<h2 class="heading">Follow Us</h2>
+				<ul class="social-icon">
+					<li><a href="#" class="fa fa-facebook wow bounceIn" data-wow-delay="0.3s"></a></li>
+					<li><a href="#" class="fa fa-twitter wow bounceIn" data-wow-delay="0.6s"></a></li>
+					<li><a href="#" class="fa fa-behance wow bounceIn" data-wow-delay="0.9s"></a></li>
+					<li><a href="#" class="fa fa-dribbble wow bounceIn" data-wow-delay="0.9s"></a></li>
+					<li><a href="#" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</footer>
+
 <!-- copyright section -->
 <section id="copyright">
 	<div class="container">
@@ -125,6 +137,5 @@ http://www.tooplate.com/view/2076-zentro
 <script src="js/nivo-lightbox.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
-
 </body>
 </html>
