--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@ http://www.tooplate.com/view/2076-zentro
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
+					<li><a href="./profile.html" class="smoothScroll">Profile</a></li>
+					<li><a href="./order.html"  class="smoothScroll">Order now</a></li>
 					<li><a href="./index.html" class="smoothScroll">Home</a></li>
 					<li><a href="./login.html" class="smoothScroll">Log in</a></li>
 					<li><a href="./about.html" class="smoothScroll">About</a></li>
+					<li><a href="./contact.html" class="smoothScroll">Contact us</a></li>
 				</ul>
 			</div>
 		</div>
