--- a/index.html
+++ b/index.html
@@ -2,124 +2,170 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<title>Salvage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Salvage</title>
 
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<!--
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <!--
 
 Template 2076 Zentro
 
 http://www.tooplate.com/view/2076-zentro
 
 -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/nivo-lightbox.css">
-	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/nivo-lightbox.css">
+    <link rel="stylesheet" href="css/nivo_themes/default/default.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
-	<!-- navigation section -->
-	<section class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <!-- navigation section -->
+    <section class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 					<span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="#" class="navbar-brand">Salvage</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="./profile.html" class="smoothScroll">Profile</a></li>
-					<li><a href="./order.html"  class="smoothScroll">Order now</a></li>
-					<li><a href="./index.html" class="smoothScroll">Home</a></li>
-					<li><a href="./login.html" class="smoothScroll">Log in</a></li>
-					<li><a href="./about.html" class="smoothScroll">About</a></li>
-					<li><a href="./contact.html" class="smoothScroll">Contact us</a></li>
-				</ul>
-			</div>
-		</div>
-	</section>
+                <a href="#" class="navbar-brand">Salvage</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="./index.html" class="smoothScroll">Home</a></li>
+                    <li><a href="./login.html" class="smoothScroll">Log in</a></li>
+                    <li><a href="./about.html" class="smoothScroll">About</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
 
-	<!-- home section -->
-	<section id="home" class="parallax-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12">
-					<h1>SALVAGE</h1>
-					<h2>Help eliminate food waste.</h2>
-					<a href="#gallery" class="smoothScroll btn btn-default">LEARN MORE</a>
-				</div>
-			</div>
-		</div>
-	</section>
+    <!-- home section -->
+    <section id="home" class="parallax-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <h1>SALVAGE</h1>
+                    <h2>Help eliminate food waste.</h2>
+                    <a href="#gallery" class="smoothScroll btn btn-default">LEARN MORE</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
+    <div class="slideshow-container">
 
-	<section id="slideshow" class="parallax-section text-center">
-		<img class="slides" src="images/gallery-img1.jpg">
-		<img class="slides" src="images/gallery-img2.jpg">
-		<img class="slides" src="images/gallery-img3.jpg">
-		<img class="slides" src="images/gallery-img4.jpg">
-		<button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-		<button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
-	</section>
+        <div class="mySlides fade">
+            <img src="images/gallery-img1.jpg" style="width:100%">
+            <div style="text-align:center">
+                <h2>Tex-Mex</h2>
+            </div>
 
-	<!-- discount section -->
-	<section id="menu" class="parallax-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-					<h1 class="heading">Gourmet food - without burning your wallet.</h1>
-					<br />
-					<br />
-					<p class="col-md-12">Up to 30% discounts on full meals, just a moment away.</p>
-					<br />
-					<br />
-					<br />
-					<a href="./login.html">
-						<h1 class="btn-default" style="padding: 20px;">Sign up</h1>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
+        </div>
 
-	<!-- team section -->
-	<section id="team" class="parallax-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-					<h1 class="heading">SIGN IN TO SALVAGE NOW</h1>
-					<hr>
-				</div>
-				<div class="col-md-12 col-sm-12" data-wow-delay="0.3s">
-					<form>
-						<label for="fname"> Username: </label><br>
-						<input type="text" id="fname" name="fname" placeholder="Username or email"><br>
-						<label for="lname"> Password: </label><br>
-						<input type="text" id="lname" name="lname">
-					</form>
-					<br>
-					<button class="button button1" type="button">Sign in</button>
-					<h5>Do not have an account? <a href> Sign up</a></h5>
+    </div>
 
-				</div>
+    <div class="mySlides fade">
+        <img src="images/gallery-img2.jpg" style="width:100%">
+        <div style="text-align:center">
+            <h2> Italian</h2>
+        </div>
 
-			</div>
-		</div>
-	</section>
+    </div>
 
-	<!-- gallery section 
+    </div>
+
+    </div>
+
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+    <script>
+        var slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {
+                slideIndex = 1
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+            setTimeout(showSlides, 8000); // Change image every 2 seconds
+        }
+    </script>
+
+
+
+    <!-- discount section -->
+    <section id="menu" class="parallax-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
+                    <h1 class="heading">Gourmet food - without burning your wallet.</h1>
+                    <br />
+                    <br />
+                    <p class="col-md-12">Up to 30% discounts on full meals, just a moment away.</p>
+                    <br />
+                    <br />
+                    <br />
+                    <a href="./login.html">
+                        <h1 class="btn-default" style="padding: 20px;">Sign up</h1>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- team section -->
+    <section id="team" class="parallax-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
+                    <h1 class="heading">SIGN IN TO SALVAGE NOW</h1>
+                    <hr>
+                </div>
+                <div class="col-md-12 col-sm-12" data-wow-delay="0.3s">
+                    <form>
+                        <label for="fname"> Username: </label><br>
+                        <input type="text" id="fname" name="fname" placeholder="Username or email"><br>
+                        <label for="lname"> Password: </label><br>
+                        <input type="text" id="lname" name="lname">
+                    </form>
+                    <br>
+                    <button class="button button1" type="button">Sign in</button>
+                    <h5>Do not have an account? <a href> Sign up</a></h5>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- gallery section 
 <section id="gallery" class="parallax-section">
 	<div class="container">
 		<div class="row">
@@ -165,83 +211,95 @@ http://www.tooplate.com/view/2076-zentro
 
 
 
-	<!-- footer section -->
-	<footer class="parallax-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-					<h2 class="heading">Contact Info.</h2>
-					<div class="ph">
-						<p><i class="fa fa-phone"></i> Phone</p>
-						<h4>090-080-0760</h4>
-					</div>
-					<div class="address">
-						<p><i class="fa fa-map-marker"></i> Our Location</p>
-						<h4>120 Duis aute irure, California, USA</h4>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-					<h2 class="heading">Open Hours</h2>
-					<p>Sunday <span>10:30 AM - 10:00 PM</span></p>
-					<p>Mon-Fri <span>9:00 AM - 8:00 PM</span></p>
-					<p>Saturday <span>11:30 AM - 10:00 PM</span></p>
-				</div>
-				<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-					<h2 class="heading">Follow Us</h2>
-					<ul class="social-icon">
-						<li><a href="#" class="fa fa-facebook wow bounceIn" data-wow-delay="0.3s"></a></li>
-						<li><a href="#" class="fa fa-twitter wow bounceIn" data-wow-delay="0.6s"></a></li>
-						<li><a href="#" class="fa fa-behance wow bounceIn" data-wow-delay="0.9s"></a></li>
-						<li><a href="#" class="fa fa-dribbble wow bounceIn" data-wow-delay="0.9s"></a></li>
-						<li><a href="#" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</footer>
+    <!-- footer section -->
+    <footer class="parallax-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <h2 class="heading">Contact Info.</h2>
+                    <div class="ph">
+                        <p><i class="fa fa-phone"></i> Phone</p>
+                        <h4>090-080-0760</h4>
+                    </div>
+                    <div class="address">
+                        <p><i class="fa fa-map-marker"></i> Our Location</p>
+                        <h4>120 Duis aute irure, California, USA</h4>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <h2 class="heading">Open Hours</h2>
+                    <p>Sunday <span>10:30 AM - 10:00 PM</span></p>
+                    <p>Mon-Fri <span>9:00 AM - 8:00 PM</span></p>
+                    <p>Saturday <span>11:30 AM - 10:00 PM</span></p>
+                </div>
+                <div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+                    <h2 class="heading">Follow Us</h2>
+                    <ul class="social-icon">
+                        <li>
+                            <a href="#" class="fa fa-facebook wow bounceIn" data-wow-delay="0.3s"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-twitter wow bounceIn" data-wow-delay="0.6s"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-behance wow bounceIn" data-wow-delay="0.9s"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-dribbble wow bounceIn" data-wow-delay="0.9s"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
-	<!-- copyright section -->
-	<section id="copyright">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12">
-					<h3>SALVAGE</h3>
-					<p>Copyright © Salvage Restaurant and Cafe
+    <!-- copyright section -->
+    <section id="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <h3>SALVAGE</h3>
+                    <p>Copyright © Salvage Restaurant and Cafe | Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-						| Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
-				</div>
-			</div>
-		</div>
-	</section>
+    <!-- JAVASCRIPT JS FILES -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.parallax.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="js/nivo-lightbox.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/custom.js"></script>
+    <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
 
-	<!-- JAVASCRIPT JS FILES -->
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.parallax.js"></script>
-	<script src="js/smoothscroll.js"></script>
-	<script src="js/nivo-lightbox.min.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script src="js/custom.js"></script>
-	<script>
-		var slideIndex = 1;
-		showDivs(slideIndex);
+        function plusDivs(n) {
+            showDivs(slideIndex += n);
+        }
 
-		function plusDivs(n) {
-			showDivs(slideIndex += n);
-		}
-
-		function showDivs(n) {
-			var i;
-			var x = document.getElementsByClassName("slides");
-			if (n > x.length) { slideIndex = 1 }
-			if (n < 1) { slideIndex = x.length };
-			for (i = 0; i < x.length; i++) {
-				x[i].style.display = "none";
-			}
-			x[slideIndex - 1].style.display = "block";
-		}
-	</script>
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("slides");
+            if (n > x.length) {
+                slideIndex = 1
+            }
+            if (n < 1) {
+                slideIndex = x.length
+            };
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideIndex - 1].style.display = "block";
+        }
+    </script>
 
 </body>
 
