--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ http://www.tooplate.com/view/2076-zentro
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>SALVAGE</h1>
-                    <h2>Help eliminate food waste.</h2>
+                    <h2>Solving Food Waste, One Meal At A Time </h2>
                     <a href="#gallery" class="smoothScroll btn btn-default">LEARN MORE</a>
                 </div>
             </div>
